<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_entries"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <Button
        android:id="@+id/clearAllEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:onClick="deleteAllEntriesLocally"
        android:text="@string/clear_all_entries"
        app:layout_constraintBottom_toBottomOf="@id/option_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/option_title" />

    <Button
        android:id="@+id/retrieveFromServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:onClick="retrieveFromTheServer"
        android:text="@string/retrieve_from_server"
        app:layout_constraintBottom_toBottomOf="@id/option_title"
        app:layout_constraintRight_toLeftOf="@id/clearAllEntries"
        app:layout_constraintTop_toTopOf="@id/option_title" />

    <Button
        android:id="@+id/moveToServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:onClick="transferToTheServer"
        android:text="@string/move_to_server"
        app:layout_constraintBottom_toBottomOf="@id/option_title"
        app:layout_constraintRight_toLeftOf="@id/retrieveFromServer"
        app:layout_constraintTop_toTopOf="@id/option_title" />

    <TextView
        android:id="@+id/option_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/entries_table_title"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/entries_fragment_container_view"
            android:name="com.example.monitorapp.FragmentEntriesTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>
